fixed scale too big(200%->110%)

--- a/style.css
+++ b/style.css
@@ -181,7 +181,7 @@ textarea::placeholder, input::placeholder {
 	}
 	100% {
 		opacity: 1;
-		transform: scale(2)
+		transform: scale(1.1)
 	}
 }
 
